samples/_failures_safe/1761538164_0eb4af_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_efb92360.c: In function ‘main’:
./samples/SAFE/__tmp_efb92360.c:143:5: error: expected declaration or statement at end of input
  143 |     addEdge(graph, 1, 3, 5);
      |     ^~~~~~~
